# gotellme

./: README.md  go.mod  main.go
cl/: trace_execve.c
ebpf-rust/: Cargo.toml
ebpf-rust/src/: lib.rs
